Fixed Visibility Issue
Now invisible things are made invisible in beginning

--- a/style.css
+++ b/style.css
@@ -154,6 +154,14 @@ h2 {
     clear: both;
 }
 
+.articleBlurb:hover {
+    background-color: hotpink;
+}
+
+.invisible {
+    visibility: hidden;
+}
+
 
 
 
